# agentpk

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  TRUST.md  WHY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.pytest_tmp/test_detects_dynamic_import0/: agent.py
.pytest_tmp/test_detects_entry_functions1/: agent.py
.pytest_tmp/test_detects_entry_functions2/: main.go
.pytest_tmp/test_detects_entry_functions3/: Agent.java
.pytest_tmp/test_detects_env_vars1/: agent.py
.pytest_tmp/test_detects_env_vars2/: main.go
.pytest_tmp/test_detects_env_vars3/: Agent.java
.pytest_tmp/test_detects_exec_command0/: main.go
.pytest_tmp/test_detects_file_operations0/: main.go
.pytest_tmp/test_detects_file_operations1/: Agent.java
.pytest_tmp/test_detects_file_write0/: agent.py
.pytest_tmp/test_detects_http_client0/: Agent.java
.pytest_tmp/test_detects_http_get0/: agent.py
.pytest_tmp/test_detects_http_get1/: main.go
.pytest_tmp/test_detects_http_post0/: agent.py
.pytest_tmp/test_detects_imports0/: main.go
.pytest_tmp/test_detects_imports1/: Agent.java
.pytest_tmp/test_detects_spring_tool0/: Agent.java
.pytest_tmp/test_detects_tool_registration1/: agent.py
.pytest_tmp/test_different_content0/: b.yaml
.pytest_tmp/test_dump_excludes_none_fields0/: sparse.yaml
.pytest_tmp/test_falls_back_gracefully_if_0/: agent.js
.pytest_tmp/test_generates_two_files0/: test-key.pem  test-key.pub.pem
.pytest_tmp/test_invalid_execution_type0/: manifest.yaml
.pytest_tmp/test_invalid_framework0/: manifest.yaml
.pytest_tmp/test_invalid_language0/: manifest.yaml
.pytest_tmp/test_invalid_name_spaces0/: manifest.yaml
.pytest_tmp/test_invalid_name_uppercase0/: manifest.yaml
.pytest_tmp/test_invalid_network0/: manifest.yaml
.pytest_tmp/test_invalid_scope0/: manifest.yaml
.pytest_tmp/test_invalid_version_not_semve0/: manifest.yaml
.pytest_tmp/test_keygen_cli0/: my-key.pem  my-key.pub.pem
.pytest_tmp/test_malformed_yaml_raises0/: manifest.yaml
.pytest_tmp/test_missing_required_field_ra0/: manifest.yaml
.pytest_tmp/test_missing_sig_fails0/: test-key.pem  (+1 more)
docs/: agent_analyzer.md  cli.md  configuration.md  quickstart.md
examples/: README.md
schema/: README.md  manifest.schema.json
tests/: conftest.py  test_analyzer.py  test_api.py  test_checksums.py  test_cli.py  test_extractors.py  test_lister.py  test_manifest.py  test_packer.py  test_runner.py  test_sdk.py  test_self_test.py  test_signing.py  test_validator.py
(+236 files in other folders)
